course catalogue overflow bugfix

--- a/src/components/pages/LandingPage/index.scss
+++ b/src/components/pages/LandingPage/index.scss
@@ -108,6 +108,7 @@
 
     .course-catalogue {
       width: 100%;
+      overflow: hidden;
       .heading {
         color: $primary-black;
         padding: 16px;
